función de especificar nombre añadida

--- a/islaDelColor/generadoDePaletasDeColores/style.css
+++ b/islaDelColor/generadoDePaletasDeColores/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-/* Variables globales piratas */
+/* Variables globales */
 :root{
     --pergamino:#fdf6e3;
     --tesoro:#d4af37;
