--- a/islaDelColor/inicio.css
+++ b/islaDelColor/inicio.css
@@ -183,6 +183,82 @@ img{
     filter: brightness(1) contrast(1.2);
 }
 
+/*Estilos de tesoros*/
+
+/* Contenedor de cartas */
+.cards {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+/* Estilo de cada carta  y su contenido */
+h3{
+    font-size: 1rem;
+    color: var(--color-negro);
+}
+
+.card {
+    width: 180px;
+    height: 120px;
+    background: #f0f0f0;
+    border: 2px solid #333;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.3s, background 0.3s;
+    text-align: center;
+}
+.card:hover {
+    transform: scale(1.05);
+    background: #ddd;
+}
+
+/* Modal base */
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    z-index: 1000;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    overflow: auto;
+}
+
+/* Contenido del modal */
+.modal-content {
+    background: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%;
+    text-align: center;
+    animation: zoomIn 0.4s;
+}
+
+/* Animación */
+@keyframes zoomIn {
+    from {transform: scale(0.7);}
+    to {transform: scale(1);}
+}
+
+/* Botón cerrar */
+.close {
+    color: #333;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.close:hover {
+    color: red;
+}
+
+
 /* Footer */
 footer {
     text-align: center;
