--- a/islaDelColor/temaColores/style.css
+++ b/islaDelColor/temaColores/style.css
@@ -37,6 +37,10 @@ header h1 {
     font-size: 2.5rem;
     text-shadow: 2px 2px var(--tesoro);
 }
+
+p{
+    font-weight: bold;
+}
 /* Menú */
 .menu {
     position: fixed;
