--- a/islaDelColor/generadoDePaletasDeColores/style.css
+++ b/islaDelColor/generadoDePaletasDeColores/style.css
@@ -76,6 +76,7 @@ h2 {
 p {
     font-size: 18px;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 /* Icono copiar */
@@ -141,4 +142,40 @@ button:hover {
 .menu a:hover {
     color: var(--azul-boton-hover);
     border-bottom: 2px solid var(--tesoro);
+}
+
+/* Estilos generales para el toast */
+.toast {
+    position: absolute;
+    background: linear-gradient(135deg, #007BFF, #0056b3); /* degradado bonito */
+    color: #fff;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 17px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+    opacity: 0;
+    transform: translateY(-10px) scale(0.95);
+    transition: opacity 0.4s ease, transform 0.4s ease;
+    z-index: 1000;
+}
+
+/* Animación de entrada */
+.toast.show {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+}
+
+/* Animación de salida */
+.toast.hide {
+    opacity: 0;
+    transform: translateY(-10px) scale(0.95);
+}
+
+/* Ícono dentro del toast */
+.toast svg {
+    stroke: #fff;
+    flex-shrink: 1;
 }
