arreglo de la vista del cofre

--- a/islaDelColor/inicio.css
+++ b/islaDelColor/inicio.css
@@ -515,6 +515,7 @@ footer p {
 .footer-image {
     width: 150px;   /* tamaño reducido */
     height: auto;
+    margin: 0 100px;
 }
 
 /* Capa fija para las joyas en toda la ventana */
