--- a/islaDelColor/inicio.css
+++ b/islaDelColor/inicio.css
@@ -26,6 +26,45 @@ body {
     color: var(--color-negro);
     transition: background-color 0.5s ease;
 }
+/*Menú superior*/
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: var(--pergamino);
+    padding: 10px 0;
+    z-index: 1000;
+    box-shadow: 2px 2px 0px #000;
+}
+/* Ícono hamburguesa */
+.menu-toggle {
+    font-size: 24px;
+    cursor: pointer;
+    display: none; /* oculto en desktop/tablet */
+}
+
+.menu ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.menu li {
+    margin: 0 20px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: var(--color-negro);
+    font-weight: 600;
+    transition: color 0.3s ease, border-bottom 0.3s ease;
+}
+
+.menu a:hover {
+    color: var(--azul-hover);
+    border-bottom: 2px solid var(--tesoro);
+    font-weight: bold;
+}
 
 /* Hero principal */
 .hero {
@@ -86,39 +125,6 @@ section p {
     font-weight: bold;
 }
 
-/* Menú superior */
-.menu {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: var(--pergamino);
-    padding: 10px 0;
-    z-index: 1000;
-    box-shadow: 2px 2px 0px #000;
-}
-
-.menu ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-}
-
-.menu li {
-    margin: 0 20px;
-}
-
-.menu a {
-    text-decoration: none;
-    color: var(--color-negro);
-    font-weight: 600;
-    transition: color 0.3s ease, border-bottom 0.3s ease;
-}
-
-.menu a:hover {
-    color: var(--azul-hover);
-    border-bottom: 2px solid var(--tesoro);
-    font-weight: bold;
-}
 
 /* Estilo para el Mapa  */
 .menu-mapa {
@@ -532,4 +538,61 @@ footer p {
     width: 100%;
     height: 100%;
     display: block;
+}
+
+/*Media queries para responsividad*/
+/* --- MÓVIL --- */
+@media (max-width: 768px) {
+  @media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    padding-left: 40px;
+  }
+
+  #menu-list {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: var(--pergamino);
+    position: absolute;
+    top: 50px;
+    left: 0;
+    padding: 10px 0;
+  }
+
+  #menu-list li {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  #menu-list.show {
+    display: flex;
+  }
+}
+
+  /* Footer móvil */
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 8px;
+    padding: 12px;
+  }
+
+  .footer-image {
+    display: none; /* ocultar cofres en móvil */
+  }
+
+  .footer-center h2 {
+    font-size: 18px;
+  }
+
+  .footer-center p {
+    font-size: 14px;
+  }
+
+  .github-link .github-icon {
+    width: 28px;
+    height: 28px;
+  }
 }
